2.0.0 - 2012xxxx
- More Music Genre icons.
- Option to hide all media flags.
- Clean up PictureGrid view type.
- Customization options for Home items.
- Customizable submenu items for most Home items.
- Move Music Videos to Home main menu.
- PVR support.
- Major rework of Music section.
- Adjust Music Fullscreen Overlay.
- Clean up animations.
- Show sort letter popup when scrolling through lists quickly.
- Option to hide global clock.
- Rework Skin Settings.
- Icon shortcuts for Addons Home item.
- RandomItems script support.
- Watchlist script support.
- RSS Editor script support.
- Peripherals dialog.
- Fix Slim Seekbar.
- Slim Music Info Overlay option.
- Fix TV Shows Next Aired script.
- Show Files submenu link in Movies, TV Shows, Music Videos if Videos is hidden.
- Option to hide Plot in Library views.
- Fix Music Lyrics button.
- Fix hang when adding new media source.
- Disable Busy Dialog when Cinema Experience script is running.
- Fix miscellaneous overlay issues.
- Various aesthetic issues resolved.
- More localization.
- French translation updated.
- Spanish translation updated.

1.1.0 - 20120423
- Fix slideshows for pictures.
- Fix navigation errors for recently added items.
- Fix flickering on Home2 style.
- Show CDArt in more views.
- Fix overlay issues in FileBrowser.
- Add Update Library to Movies and TV Shows submenus.
- Options to hide unwanted Views.
- Minor optimizations for slower systems.
- Add optional realistic weather icons.
- Add PseudoTV link to TV Shows in Home2 style.
- Add PictureGrid view type.
- Show more picture information below fanart.
- Use "The Trailers" addon in favor of "Apple Movie Trailers Lite".
- Add Grey theme from Amra.
- Add Mosaic Purple theme from Amra.
- Add Silk theme from Amra.
- Fix miscellaneous overlay issues.

1.0.3
- Fixed Seekbar to not overlap Director/Genre/Studio if Plot is present.
- Added files for themes.
- Added xbt for themes for SVN.

1.0.2
- Added new music genre icons from Amra.

1.0.1